update the site
add hover
add about me section
add top button
add scroller text
fix the responsive

--- a/index.html
+++ b/index.html
@@ -29,7 +29,16 @@
     <div class="hero-section">
       <div class="right-section">
         <h1>امیر حسین ناظری</h1>
-        <h4>طراح سایت</h4>
+
+        <h2>
+        <span>
+          <span>Coder</span>
+          <span>Programer</span>
+          <span>Develpoer</span>
+          <span>Designer</span>
+        </span>
+        I'm a
+</h2>
         <button id="resume-file">
           مشاهده رزومه
           <img src="arrow.svg" />
@@ -49,7 +58,23 @@
     <br />
 
     <div class="about-me-section">
-      <h3>درباره من</h3>
+      <div class="about-me-box">
+        <h3>درباره من</h3>
+        <div class="inner-box">
+          <h4>
+            من امیر هستم، دانش‌آموز پایه یازدهم در رشته طراحی صفحات وب. از
+            علاقه‌مندان به دنیای وب و طراحی سایت هستم و در حال حاضر با HTML و
+            CSS پروژه‌های مختلفی طراحی می‌کنم. همچنین با نرم‌افزار فتوشاپ و
+            مهارت‌های ICDL آشنایی دارم. هدفم کسب تجربه‌های بیشتر و ورود حرفه‌ای
+            به بازار کار در حوزه طراحی و توسعه وب است. میتونید رزومه منو مشاهده
+            کنید.
+          </h4>
+        </div>
+      </div>
     </div>
+    <button id="top-btn">
+      <a href="">
+        <img src="arrow.svg" /></button>
+      </a>
   </body>
 </html>
