--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         <h1>امیر حسین ناظری</h1>
 
         <h2>
-        <span>
-          <span>Coder</span>
-          <span>Programer</span>
-          <span>Develpoer</span>
-          <span>Designer</span>
-        </span>
-        I'm a
-</h2>
+          <span>
+            <span>Coder</span>
+            <span>Programer</span>
+            <span>Develpoer</span>
+            <span>Designer</span>
+          </span>
+          I'm a
+        </h2>
         <button id="resume-file">
           مشاهده رزومه
           <img src="arrow.svg" />
@@ -74,7 +74,15 @@
     </div>
     <button id="top-btn">
       <a href="">
-        <img src="arrow.svg" /></button>
+        <img src="arrow.svg" />
       </a>
+    </button>
+
+    <div class="portofilo">
+      <h2>portofilo</h2>
+      <div class="html">
+        <img src="html.png" width="50px" />
+      </div>
+    </div>
   </body>
 </html>
