--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
     </button>
 
     <div class="portofilo">
-      <h2>portofilo</h2>
+      <h2>مهارت ها</h2>
       <div class="html">
-        <img src="html.png" width="50px" />
+        <img src="html.png" width="80px" />
+        <span>Html</span>
       </div>
     </div>
   </body>
