--- a/index.html
+++ b/index.html
@@ -82,12 +82,13 @@
       </a>
     </button>
 
-    <div class="portofilo">
+<!--     <div class="portofilo">
       <h2>مهارت ها</h2>
       <div class="html">
         <img src="html.png" width="80px" />
         <span>Html</span>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
+
