--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="overlay"></div>
 
     <header>
-      <div class="header animate__bounceInDown">
+      <div class="header">
         <div class="logo"><img src="logo.png" width="100px" /></div>
         <nav>
           <ul>
@@ -82,13 +82,12 @@
       </a>
     </button>
 
-<!--     <div class="portofilo">
+    <div class="portofilo">
       <h2>مهارت ها</h2>
       <div class="html">
         <img src="html.png" width="80px" />
         <span>Html</span>
       </div>
-    </div> -->
+    </div>
   </body>
 </html>
-
