--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="overlay"></div>
 
     <header>
-      <div class="header">
+      <div class="header animate__bounceInDown">
         <div class="logo"><img src="logo.png" width="100px" /></div>
         <nav>
           <ul>
@@ -91,3 +91,4 @@
     </div>
   </body>
 </html>
+
