add google meta tag
add google meta tag for google search console

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="google-site-verification"
+      content="UqwTsPC1AmMCdOHYMpv5SeBegVkmE9ruzZ3Eci9mqbM"
+    />
     <title>Amir hossein nazery</title>
     <link rel="stylesheet" href="style.css" />
     <link
