add sitemap file

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
   </head>
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/vazir-font@30.1.0/dist/font-face.min.css"
+  />
   <body dir="rtl">
     <video class="background-video" autoplay muted loop>
       <source src="video.mp4" type="video/mp4" />
