--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html dir="rtl" lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,18 +7,22 @@
       name="google-site-verification"
       content="UqwTsPC1AmMCdOHYMpv5SeBegVkmE9ruzZ3Eci9mqbM"
     />
-    <title>Amir hossein nazery</title>
+    <meta
+      name="description"
+      content="طراحی سایت Html Css معرفی مهارت ها و رزومه امیر حسین ناظری"
+    />
+    <title>رزومه و مهارت‌های امیر حسین ناظری | طراحی سایت HTML CSS</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/vazir-font@30.1.0/dist/font-face.min.css"
+    />
   </head>
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/vazir-font@30.1.0/dist/font-face.min.css"
-  />
-  <body dir="rtl">
+  <body>
     <video class="background-video" autoplay muted loop>
       <source src="video.mp4" type="video/mp4" />
     </video>
@@ -27,7 +31,9 @@
 
     <header>
       <div class="header animate__bounceInDown">
-        <div class="logo"><img src="logo.png" width="100px" /></div>
+        <div class="logo">
+          <img src="logo.png" width="100" alt="لوگو سایت" />
+        </div>
         <nav>
           <ul>
             <li><a href="">درباره من</a></li>
@@ -46,24 +52,28 @@
           <span>
             <span>Coder</span>
             <span>Programer</span>
-            <span>Develpoer</span>
+            <span>Developer</span>
             <span>Designer</span>
           </span>
           I'm a
         </h2>
         <button id="resume-file" class="animate__rubberBand">
           مشاهده رزومه
-          <img src="arrow.svg" />
+          <img src="arrow.svg" alt="فلش" />
         </button>
       </div>
 
       <div class="left-section">
         <div class="profile">
-          <img src="contactPicture.webp" width="350px" />
+          <img
+            src="contactPicture.webp"
+            width="350px"
+            alt="عکس امیرحسین ناظری"
+          />
         </div>
       </div>
       <div class="scroll">
-        <img src="arrow_downward.png" />
+        <img src="arrow_downward.png" alt="اسکرول" />
       </div>
     </div>
 
@@ -86,14 +96,14 @@
     </div>
     <button id="top-btn">
       <a href="">
-        <img src="arrow.svg" />
+        <img src="arrow.svg" alt="رفتن به بالا" />
       </a>
     </button>
 
     <div class="portofilo">
       <h2>مهارت ها</h2>
       <div class="html">
-        <img src="html.png" width="80px" />
+        <img src="html.png" width="80" alt="لوگو html" />
         <span>Html</span>
       </div>
     </div>
