--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/vazir-font@30.1.0/dist/font-face.min.css"
     />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-H0S6Y58YJ8"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-H0S6Y58YJ8");
+    </script>
   </head>
   <body>
     <video class="background-video" autoplay muted loop>
