--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html dir="rtl" lang="fa">
+<html dir="rtl" lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,20 +21,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/vazir-font@30.1.0/dist/font-face.min.css"
     />
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-H0S6Y58YJ8"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-H0S6Y58YJ8");
-    </script>
+    <link rel="shortcut icon" href="contactPicture.webp" type="image/x-icon" />
   </head>
   <body>
     <video class="background-video" autoplay muted loop>
@@ -68,6 +55,7 @@
             <span>Programer</span>
             <span>Developer</span>
             <span>Designer</span>
+            <span>Front end</span>
           </span>
           I'm a
         </h2>
@@ -115,10 +103,23 @@
     </button>
 
     <div class="portofilo">
+      <video class="background-video-P" autoplay muted loop>
+        <source src="video.mp4" type="video/mp4" />
+      </video>
       <h2>مهارت ها</h2>
-      <div class="html">
-        <img src="html.png" width="80" alt="لوگو html" />
-        <span>Html</span>
+      <div class="container animate__lightSpeedInRight">
+        <div class="html">
+          <img src="html.png" width="80" alt="لوگو html" />
+          <span>Html</span>
+        </div>
+        <div class="html">
+          <img src="html.png" width="80" alt="لوگو html" />
+          <span>css</span>
+        </div>
+        <div class="html">
+          <img src="html.png" width="80" alt="لوگو html" />
+          <span>Java Script</span>
+        </div>
       </div>
     </div>
   </body>
