ad offline page
is not compelet

--- a/index.html
+++ b/index.html
@@ -122,5 +122,9 @@
         </div>
       </div>
     </div>
+    <div class="offline-page" id="offline-page">
+      <h1>یکی پاش رفته روی سیم!</h1>
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
