--- a/index.html
+++ b/index.html
@@ -122,8 +122,14 @@
         </div>
       </div>
     </div>
+
     <div class="offline-page" id="offline-page">
       <h1>یکی پاش رفته روی سیم!</h1>
+    </div>
+
+    <div class="loading" id="loading">
+      <div class="loader"></div>
+      <h2>در حال بارگیری سایت...</h2>
     </div>
     <script src="script.js"></script>
   </body>
