--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
           <span>Html</span>
         </div>
         <div class="html">
-          <img src="html.png" width="80" alt="لوگو html" />
+          <img src="CSS3.svg" width="80" alt="لوگو css" />
           <span>css</span>
         </div>
         <div class="html">
-          <img src="html.png" width="80" alt="لوگو html" />
+          <img src="js.webp" width="80" alt="لوگو java script" />
           <span>Java Script</span>
         </div>
       </div>
@@ -126,6 +126,8 @@
     <div class="offline-page" id="offline-page">
       <h1>یکی پاش رفته روی سیم!</h1>
     </div>
+
+    <!-- <div class="contact">ارتباط با من</div> -->
 
     <div class="loading" id="loading">
       <div class="loader"></div>
