--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta
       name="description"
-      content="طراحی سایت Html Css معرفی مهارت ها و رزومه امیر حسین ناظری"
+      content="سلام من امیر حسین ناظری هستم برنامه نویس تازه کار html css و js  کار میکنم فعلا سعی دارم روی پروژه های شخصی و تمرینی خودم کار کنم تا حرفه ای تر بشم"
     />
     <title>رزومه و مهارت‌های امیر حسین ناظری | طراحی سایت HTML CSS</title>
     <link rel="stylesheet" href="style.css" />
