--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html dir="rtl" lang="en">
+<html dir="rtl" lang="fa">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,7 +11,9 @@
       name="description"
       content="سلام من امیر حسین ناظری هستم برنامه نویس تازه کار html css و js  کار میکنم فعلا سعی دارم روی پروژه های شخصی و تمرینی خودم کار کنم تا حرفه ای تر بشم"
     />
-    <title>رزومه و مهارت‌های امیر حسین ناظری | طراحی سایت HTML CSS</title>
+    <title>
+      امیر حسین ناظری | طراح سایت و برنامه‌نویس فرانت اند (HTML, CSS, JS)
+    </title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -124,7 +126,7 @@
     </div>
 
     <div class="offline-page" id="offline-page">
-      <h1>یکی پاش رفته روی سیم!</h1>
+      <h2>یکی پاش رفته روی سیم!</h2>
     </div>
 
     <!-- <div class="contact">ارتباط با من</div> -->
