--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
       name="description"
       content="سلام من امیر حسین ناظری هستم برنامه نویس تازه کار html css و js  کار میکنم فعلا سعی دارم روی پروژه های شخصی و تمرینی خودم کار کنم تا حرفه ای تر بشم"
     />
-    <title>
-      امیر حسین ناظری | طراح سایت و برنامه‌نویس فرانت اند (HTML, CSS, JS)
-    </title>
+    <title>رزومه و مهارت‌های امیر حسین ناظری | طراحی سایت HTML CSS</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -39,9 +37,9 @@
         </div>
         <nav>
           <ul>
-            <li><a href="">درباره من</a></li>
+            <li><a href="#about-me">درباره من</a></li>
             <li><a href="">ارتباط با من</a></li>
-            <li><a href=""> نمونه کار</a></li>
+            <li><a href="#portofilo">مهارت های من</a></li>
           </ul>
         </nav>
       </div>
@@ -61,10 +59,12 @@
           </span>
           I'm a
         </h2>
-        <button id="resume-file" class="animate__rubberBand">
-          مشاهده رزومه
-          <img src="arrow.svg" alt="فلش" />
-        </button>
+        <a href="MyResume-Amir-Nazery.pdf">
+          <button id="resume-file" class="animate__rubberBand">
+            مشاهده رزومه
+            <img src="arrow.svg" alt="فلش" />
+          </button>
+        </a>
       </div>
 
       <div class="left-section">
@@ -83,7 +83,7 @@
 
     <br />
 
-    <div class="about-me-section">
+    <div class="about-me-section" id="about-me">
       <div class="about-me-box">
         <h3>درباره من</h3>
         <div class="inner-box">
@@ -104,7 +104,7 @@
       </a>
     </button>
 
-    <div class="portofilo">
+    <div class="portofilo" id="portofilo">
       <video class="background-video-P" autoplay muted loop>
         <source src="video.mp4" type="video/mp4" />
       </video>
